--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
                     player.setVelocityY(-5330);
                 }
 
+		if (cursors.down.isDown) {
+			// TODO : Set position up
+		}
+
                 if (movingPlatform.x >= 500)
                 {
                     movingPlatform.setVelocityX(-50);
